# CST8219LabTutorial

./: .gitignore  CMakeLists.txt  Card Deck for Playing Games.docx  README.md  deck.cpp  deck.h  livecodesession1 alternate approach.txt  main.cpp  winmain.cpp
